<resources>
    <string name="app_name">StopForget!(test)</string>
    <string name="desc">créer</string>
    <string name="title">Titre</string>
    <string name="valider">VALIDER</string>
    <string name="poubelle">poubelle</string>
    <string name="annuler">ANNULER</string>
    <string name="day">Day(:01)</string>
    <string name="month">Month(:02)</string>
    <string name="hour">Hour(ex: 12)</string>
    <string name="minute">Min(ex: 30)</string>
    <string name="popup_ajout_title">Ajout d\'un élément :</string>
    <string name="nom">Nom</string>
    <string name="sl">Sous-liste</string>
    <string name="item">Item</string>
    <string name="an">Annuler</string>
    <string name="supprimer">supprimer</string>
    <string name="aj_sl">Ajouter un élément dans la sous-liste :</string>
    <string name="cloche">cloche</string>
    <string name="augmenter">augmenter</string>
    <string name="reduire">reduire</string>
</resources>