<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_width="350sp"
    android:background="@drawable/bg_popup"
    android:padding="20sp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:layout_width="130sp"
            android:layout_marginEnd="10sp"
            android:layout_height="wrap_content"
            android:onClick="reduire"
            android:text="@string/reduire" />

        <Button
            android:layout_width="130sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:onClick="augmenter"
            android:text="@string/augmenter" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="supprimer"
        android:layout_gravity="center"
        android:backgroundTint="@color/rouge"
        android:text="@string/supprimer"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aj_sl"
        android:textSize="25sp"
        android:fontFamily="@font/fredokalight" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nom_ajout"
        android:fontFamily="@font/fredokalight"
        android:textSize="18sp"
        android:hint="@string/nom" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:layout_width="125sp"
            android:layout_height="wrap_content"
            android:onClick="ajout_sousliste2"
            android:text="@string/sl" />

        <Button
            android:layout_width="125sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:onClick="ajout_item2"
            android:text="@string/item" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="annuler"
        android:layout_gravity="center"
        android:backgroundTint="@color/blue2"
        android:text="@string/an" />

</LinearLayout>